[workspace]
members = [
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"client/relay-chain-interface",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-rpc-interface",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/runtime",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"polkadot-parachains/",
	"polkadot-parachains/pallets/parachain-info",
	"polkadot-parachains/pallets/ping",
	"polkadot-parachains/rococo-parachain",
	"polkadot-parachains/shell",
	"polkadot-parachains/parachains-common",
	"polkadot-parachains/statemint",
	"polkadot-parachains/statemine",
	"polkadot-parachains/westmint",
	"polkadot-parachains/canvas-kusama",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
[patch."https://github.com/paritytech/substrate"]
node-template ={path = "/home/stephen/dev/purestake/substrate/bin/node-template/node" }
frame-benchmarking ={path = "/home/stephen/dev/purestake/substrate/frame/benchmarking" }
frame-support ={path = "/home/stephen/dev/purestake/substrate/frame/support" }
frame-support-procedural ={path = "/home/stephen/dev/purestake/substrate/frame/support/procedural" }
frame-support-procedural-tools ={path = "/home/stephen/dev/purestake/substrate/frame/support/procedural/tools" }
frame-support-procedural-tools-derive ={path = "/home/stephen/dev/purestake/substrate/frame/support/procedural/tools/derive" }
sp-arithmetic ={path = "/home/stephen/dev/purestake/substrate/primitives/arithmetic" }
sp-debug-derive ={path = "/home/stephen/dev/purestake/substrate/primitives/debug-derive" }
sp-std ={path = "/home/stephen/dev/purestake/substrate/primitives/std" }
sp-core ={path = "/home/stephen/dev/purestake/substrate/primitives/core" }
sp-core-hashing ={path = "/home/stephen/dev/purestake/substrate/primitives/core/hashing" }
sp-externalities ={path = "/home/stephen/dev/purestake/substrate/primitives/externalities" }
sp-storage ={path = "/home/stephen/dev/purestake/substrate/primitives/storage" }
sp-runtime-interface ={path = "/home/stephen/dev/purestake/substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro ={path = "/home/stephen/dev/purestake/substrate/primitives/runtime-interface/proc-macro" }
sp-tracing ={path = "/home/stephen/dev/purestake/substrate/primitives/tracing" }
sp-wasm-interface ={path = "/home/stephen/dev/purestake/substrate/primitives/wasm-interface" }
sp-io ={path = "/home/stephen/dev/purestake/substrate/primitives/io" }
sp-keystore ={path = "/home/stephen/dev/purestake/substrate/primitives/keystore" }
sp-state-machine ={path = "/home/stephen/dev/purestake/substrate/primitives/state-machine" }
sp-panic-handler ={path = "/home/stephen/dev/purestake/substrate/primitives/panic-handler" }
sp-trie ={path = "/home/stephen/dev/purestake/substrate/primitives/trie" }
sp-runtime ={path = "/home/stephen/dev/purestake/substrate/primitives/runtime" }
sp-application-crypto ={path = "/home/stephen/dev/purestake/substrate/primitives/application-crypto" }
sp-api ={path = "/home/stephen/dev/purestake/substrate/primitives/api" }
sp-api-proc-macro ={path = "/home/stephen/dev/purestake/substrate/primitives/api/proc-macro" }
sp-version ={path = "/home/stephen/dev/purestake/substrate/primitives/version" }
sp-core-hashing-proc-macro ={path = "/home/stephen/dev/purestake/substrate/primitives/core/hashing/proc-macro" }
sp-version-proc-macro ={path = "/home/stephen/dev/purestake/substrate/primitives/version/proc-macro" }
sp-test-primitives ={path = "/home/stephen/dev/purestake/substrate/primitives/test-primitives" }
substrate-test-runtime-client ={path = "/home/stephen/dev/purestake/substrate/test-utils/runtime/client" }
sc-block-builder ={path = "/home/stephen/dev/purestake/substrate/client/block-builder" }
sc-client-api ={path = "/home/stephen/dev/purestake/substrate/client/api" }
substrate-prometheus-endpoint ={path = "/home/stephen/dev/purestake/substrate/utils/prometheus" }
sc-executor ={path = "/home/stephen/dev/purestake/substrate/client/executor" }
sc-executor-common ={path = "/home/stephen/dev/purestake/substrate/client/executor/common" }
sc-allocator ={path = "/home/stephen/dev/purestake/substrate/client/allocator" }
sp-maybe-compressed-blob ={path = "/home/stephen/dev/purestake/substrate/primitives/maybe-compressed-blob" }
sp-serializer ={path = "/home/stephen/dev/purestake/substrate/primitives/serializer" }
sc-executor-wasmi ={path = "/home/stephen/dev/purestake/substrate/client/executor/wasmi" }
sc-executor-wasmtime ={path = "/home/stephen/dev/purestake/substrate/client/executor/wasmtime" }
sc-runtime-test ={path = "/home/stephen/dev/purestake/substrate/client/executor/runtime-test" }
sp-sandbox ={path = "/home/stephen/dev/purestake/substrate/primitives/sandbox" }
sp-tasks ={path = "/home/stephen/dev/purestake/substrate/primitives/tasks" }
substrate-wasm-builder ={path = "/home/stephen/dev/purestake/substrate/utils/wasm-builder" }
sc-tracing ={path = "/home/stephen/dev/purestake/substrate/client/tracing" }
sc-rpc-server ={path = "/home/stephen/dev/purestake/substrate/client/rpc-servers" }
sc-tracing-proc-macro ={path = "/home/stephen/dev/purestake/substrate/client/tracing/proc-macro" }
sp-blockchain ={path = "/home/stephen/dev/purestake/substrate/primitives/blockchain" }
sp-consensus ={path = "/home/stephen/dev/purestake/substrate/primitives/consensus/common" }
sp-inherents ={path = "/home/stephen/dev/purestake/substrate/primitives/inherents" }
sp-database ={path = "/home/stephen/dev/purestake/substrate/primitives/database" }
sp-rpc ={path = "/home/stephen/dev/purestake/substrate/primitives/rpc" }
substrate-test-runtime ={path = "/home/stephen/dev/purestake/substrate/test-utils/runtime" }
beefy-primitives ={path = "/home/stephen/dev/purestake/substrate/primitives/beefy" }
frame-system ={path = "/home/stephen/dev/purestake/substrate/frame/system" }
frame-system-rpc-runtime-api ={path = "/home/stephen/dev/purestake/substrate/frame/system/rpc/runtime-api" }
pallet-babe ={path = "/home/stephen/dev/purestake/substrate/frame/babe" }
pallet-authorship ={path = "/home/stephen/dev/purestake/substrate/frame/authorship" }
sp-authorship ={path = "/home/stephen/dev/purestake/substrate/primitives/authorship" }
pallet-session ={path = "/home/stephen/dev/purestake/substrate/frame/session" }
pallet-timestamp ={path = "/home/stephen/dev/purestake/substrate/frame/timestamp" }
sp-timestamp ={path = "/home/stephen/dev/purestake/substrate/primitives/timestamp" }
sp-session ={path = "/home/stephen/dev/purestake/substrate/primitives/session" }
sp-staking ={path = "/home/stephen/dev/purestake/substrate/primitives/staking" }
sp-consensus-babe ={path = "/home/stephen/dev/purestake/substrate/primitives/consensus/babe" }
sp-consensus-slots ={path = "/home/stephen/dev/purestake/substrate/primitives/consensus/slots" }
sp-consensus-vrf ={path = "/home/stephen/dev/purestake/substrate/primitives/consensus/vrf" }
frame-election-provider-support ={path = "/home/stephen/dev/purestake/substrate/frame/election-provider-support" }
frame-election-provider-solution-type ={path = "/home/stephen/dev/purestake/substrate/frame/election-provider-support/solution-type" }
sp-npos-elections ={path = "/home/stephen/dev/purestake/substrate/primitives/npos-elections" }
substrate-test-utils ={path = "/home/stephen/dev/purestake/substrate/test-utils" }
substrate-test-utils-derive ={path = "/home/stephen/dev/purestake/substrate/test-utils/derive" }
sc-service ={path = "/home/stephen/dev/purestake/substrate/client/service" }
sc-chain-spec ={path = "/home/stephen/dev/purestake/substrate/client/chain-spec" }
sc-chain-spec-derive ={path = "/home/stephen/dev/purestake/substrate/client/chain-spec/derive" }
sc-network ={path = "/home/stephen/dev/purestake/substrate/client/network" }
fork-tree ={path = "/home/stephen/dev/purestake/substrate/utils/fork-tree" }
sc-consensus ={path = "/home/stephen/dev/purestake/substrate/client/consensus/common" }
sc-utils ={path = "/home/stephen/dev/purestake/substrate/client/utils" }
sc-peerset ={path = "/home/stephen/dev/purestake/substrate/client/peerset" }
sp-finality-grandpa ={path = "/home/stephen/dev/purestake/substrate/primitives/finality-grandpa" }
sc-telemetry ={path = "/home/stephen/dev/purestake/substrate/client/telemetry" }
sc-client-db ={path = "/home/stephen/dev/purestake/substrate/client/db" }
sc-state-db ={path = "/home/stephen/dev/purestake/substrate/client/state-db" }
sc-informant ={path = "/home/stephen/dev/purestake/substrate/client/informant" }
sc-transaction-pool-api ={path = "/home/stephen/dev/purestake/substrate/client/transaction-pool/api" }
sc-keystore ={path = "/home/stephen/dev/purestake/substrate/client/keystore" }
sc-offchain ={path = "/home/stephen/dev/purestake/substrate/client/offchain" }
sp-offchain ={path = "/home/stephen/dev/purestake/substrate/primitives/offchain" }
sc-transaction-pool ={path = "/home/stephen/dev/purestake/substrate/client/transaction-pool" }
sp-transaction-pool ={path = "/home/stephen/dev/purestake/substrate/primitives/transaction-pool" }
substrate-test-runtime-transaction-pool ={path = "/home/stephen/dev/purestake/substrate/test-utils/runtime/transaction-pool" }
sc-rpc ={path = "/home/stephen/dev/purestake/substrate/client/rpc" }
sc-rpc-api ={path = "/home/stephen/dev/purestake/substrate/client/rpc-api" }
sp-block-builder ={path = "/home/stephen/dev/purestake/substrate/primitives/block-builder" }
sp-transaction-storage-proof ={path = "/home/stephen/dev/purestake/substrate/primitives/transaction-storage-proof" }
pallet-balances ={path = "/home/stephen/dev/purestake/substrate/frame/balances" }
pallet-transaction-payment ={path = "/home/stephen/dev/purestake/substrate/frame/transaction-payment" }
pallet-offences ={path = "/home/stephen/dev/purestake/substrate/frame/offences" }
pallet-staking ={path = "/home/stephen/dev/purestake/substrate/frame/staking" }
pallet-bags-list ={path = "/home/stephen/dev/purestake/substrate/frame/bags-list" }
pallet-staking-reward-curve ={path = "/home/stephen/dev/purestake/substrate/frame/staking/reward-curve" }
sp-consensus-aura ={path = "/home/stephen/dev/purestake/substrate/primitives/consensus/aura" }
sp-keyring ={path = "/home/stephen/dev/purestake/substrate/primitives/keyring" }
substrate-test-client ={path = "/home/stephen/dev/purestake/substrate/test-utils/client" }
sp-runtime-interface-test-wasm ={path = "/home/stephen/dev/purestake/substrate/primitives/runtime-interface/test-wasm" }
frame-benchmarking-cli ={path = "/home/stephen/dev/purestake/substrate/utils/frame/benchmarking-cli" }
sc-cli ={path = "/home/stephen/dev/purestake/substrate/client/cli" }
node-template-runtime ={path = "/home/stephen/dev/purestake/substrate/bin/node-template/runtime" }
frame-executive ={path = "/home/stephen/dev/purestake/substrate/frame/executive" }
frame-system-benchmarking ={path = "/home/stephen/dev/purestake/substrate/frame/system/benchmarking" }
frame-try-runtime ={path = "/home/stephen/dev/purestake/substrate/frame/try-runtime" }
pallet-aura ={path = "/home/stephen/dev/purestake/substrate/frame/aura" }
pallet-grandpa ={path = "/home/stephen/dev/purestake/substrate/frame/grandpa" }
pallet-randomness-collective-flip ={path = "/home/stephen/dev/purestake/substrate/frame/randomness-collective-flip" }
pallet-sudo ={path = "/home/stephen/dev/purestake/substrate/frame/sudo" }
pallet-template ={path = "/home/stephen/dev/purestake/substrate/bin/node-template/pallets/template" }
pallet-transaction-payment-rpc-runtime-api ={path = "/home/stephen/dev/purestake/substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-transaction-payment-rpc ={path = "/home/stephen/dev/purestake/substrate/frame/transaction-payment/rpc" }
sc-basic-authorship ={path = "/home/stephen/dev/purestake/substrate/client/basic-authorship" }
sc-proposer-metrics ={path = "/home/stephen/dev/purestake/substrate/client/proposer-metrics" }
sc-consensus-aura ={path = "/home/stephen/dev/purestake/substrate/client/consensus/aura" }
sc-consensus-slots ={path = "/home/stephen/dev/purestake/substrate/client/consensus/slots" }
sc-network-test ={path = "/home/stephen/dev/purestake/substrate/client/network/test" }
sc-finality-grandpa ={path = "/home/stephen/dev/purestake/substrate/client/finality-grandpa" }
sc-network-gossip ={path = "/home/stephen/dev/purestake/substrate/client/network-gossip" }
substrate-frame-rpc-system ={path = "/home/stephen/dev/purestake/substrate/utils/frame/rpc/system" }
try-runtime-cli ={path = "/home/stephen/dev/purestake/substrate/utils/frame/try-runtime/cli" }
remote-externalities ={path = "/home/stephen/dev/purestake/substrate/utils/frame/remote-externalities" }
pallet-elections-phragmen ={path = "/home/stephen/dev/purestake/substrate/frame/elections-phragmen" }
substrate-build-script-utils ={path = "/home/stephen/dev/purestake/substrate/utils/build-script-utils" }
node-bench ={path = "/home/stephen/dev/purestake/substrate/bin/node/bench" }
node-primitives ={path = "/home/stephen/dev/purestake/substrate/bin/node/primitives" }
node-runtime ={path = "/home/stephen/dev/purestake/substrate/bin/node/runtime" }
pallet-asset-tx-payment ={path = "/home/stephen/dev/purestake/substrate/frame/transaction-payment/asset-tx-payment" }
pallet-assets ={path = "/home/stephen/dev/purestake/substrate/frame/assets" }
pallet-authority-discovery ={path = "/home/stephen/dev/purestake/substrate/frame/authority-discovery" }
sp-authority-discovery ={path = "/home/stephen/dev/purestake/substrate/primitives/authority-discovery" }
pallet-bounties ={path = "/home/stephen/dev/purestake/substrate/frame/bounties" }
pallet-treasury ={path = "/home/stephen/dev/purestake/substrate/frame/treasury" }
pallet-child-bounties ={path = "/home/stephen/dev/purestake/substrate/frame/child-bounties" }
pallet-collective ={path = "/home/stephen/dev/purestake/substrate/frame/collective" }
pallet-contracts ={path = "/home/stephen/dev/purestake/substrate/frame/contracts" }
pallet-contracts-primitives ={path = "/home/stephen/dev/purestake/substrate/frame/contracts/common" }
pallet-contracts-proc-macro ={path = "/home/stephen/dev/purestake/substrate/frame/contracts/proc-macro" }
pallet-utility ={path = "/home/stephen/dev/purestake/substrate/frame/utility" }
pallet-contracts-rpc-runtime-api ={path = "/home/stephen/dev/purestake/substrate/frame/contracts/rpc/runtime-api" }
pallet-conviction-voting ={path = "/home/stephen/dev/purestake/substrate/frame/conviction-voting" }
pallet-scheduler ={path = "/home/stephen/dev/purestake/substrate/frame/scheduler" }
pallet-preimage ={path = "/home/stephen/dev/purestake/substrate/frame/preimage" }
pallet-democracy ={path = "/home/stephen/dev/purestake/substrate/frame/democracy" }
pallet-election-provider-multi-phase ={path = "/home/stephen/dev/purestake/substrate/frame/election-provider-multi-phase" }
pallet-gilt ={path = "/home/stephen/dev/purestake/substrate/frame/gilt" }
pallet-identity ={path = "/home/stephen/dev/purestake/substrate/frame/identity" }
pallet-im-online ={path = "/home/stephen/dev/purestake/substrate/frame/im-online" }
pallet-indices ={path = "/home/stephen/dev/purestake/substrate/frame/indices" }
pallet-lottery ={path = "/home/stephen/dev/purestake/substrate/frame/lottery" }
frame-support-test ={path = "/home/stephen/dev/purestake/substrate/frame/support/test" }
frame-support-test-pallet ={path = "/home/stephen/dev/purestake/substrate/frame/support/test/pallet" }
pallet-membership ={path = "/home/stephen/dev/purestake/substrate/frame/membership" }
pallet-mmr ={path = "/home/stephen/dev/purestake/substrate/frame/merkle-mountain-range" }
pallet-mmr-primitives ={path = "/home/stephen/dev/purestake/substrate/frame/merkle-mountain-range/primitives" }
pallet-multisig ={path = "/home/stephen/dev/purestake/substrate/frame/multisig" }
pallet-offences-benchmarking ={path = "/home/stephen/dev/purestake/substrate/frame/offences/benchmarking" }
pallet-proxy ={path = "/home/stephen/dev/purestake/substrate/frame/proxy" }
pallet-recovery ={path = "/home/stephen/dev/purestake/substrate/frame/recovery" }
pallet-referenda ={path = "/home/stephen/dev/purestake/substrate/frame/referenda" }
pallet-session-benchmarking ={path = "/home/stephen/dev/purestake/substrate/frame/session/benchmarking" }
pallet-society ={path = "/home/stephen/dev/purestake/substrate/frame/society" }
pallet-state-trie-migration ={path = "/home/stephen/dev/purestake/substrate/frame/state-trie-migration" }
substrate-state-trie-migration-rpc ={path = "/home/stephen/dev/purestake/substrate/utils/frame/rpc/state-trie-migration-rpc" }
pallet-tips ={path = "/home/stephen/dev/purestake/substrate/frame/tips" }
pallet-transaction-storage ={path = "/home/stephen/dev/purestake/substrate/frame/transaction-storage" }
pallet-uniques ={path = "/home/stephen/dev/purestake/substrate/frame/uniques" }
pallet-vesting ={path = "/home/stephen/dev/purestake/substrate/frame/vesting" }
pallet-whitelist ={path = "/home/stephen/dev/purestake/substrate/frame/whitelist" }
node-testing ={path = "/home/stephen/dev/purestake/substrate/bin/node/testing" }
node-executor ={path = "/home/stephen/dev/purestake/substrate/bin/node/executor" }
node-cli ={path = "/home/stephen/dev/purestake/substrate/bin/node/cli" }
node-inspect ={path = "/home/stephen/dev/purestake/substrate/bin/node/inspect" }
node-rpc ={path = "/home/stephen/dev/purestake/substrate/bin/node/rpc" }
pallet-contracts-rpc ={path = "/home/stephen/dev/purestake/substrate/frame/contracts/rpc" }
pallet-mmr-rpc ={path = "/home/stephen/dev/purestake/substrate/frame/merkle-mountain-range/rpc" }
sc-consensus-babe ={path = "/home/stephen/dev/purestake/substrate/client/consensus/babe" }
sc-consensus-epochs ={path = "/home/stephen/dev/purestake/substrate/client/consensus/epochs" }
sc-consensus-babe-rpc ={path = "/home/stephen/dev/purestake/substrate/client/consensus/babe/rpc" }
sc-finality-grandpa-rpc ={path = "/home/stephen/dev/purestake/substrate/client/finality-grandpa/rpc" }
sc-sync-state-rpc ={path = "/home/stephen/dev/purestake/substrate/client/sync-state-rpc" }
sc-authority-discovery ={path = "/home/stephen/dev/purestake/substrate/client/authority-discovery" }
sc-consensus-uncles ={path = "/home/stephen/dev/purestake/substrate/client/consensus/uncles" }
sc-service-test ={path = "/home/stephen/dev/purestake/substrate/client/service/test" }
substrate-frame-cli ={path = "/home/stephen/dev/purestake/substrate/utils/frame/frame-utilities-cli" }
chain-spec-builder ={path = "/home/stephen/dev/purestake/substrate/bin/utils/chain-spec-builder" }
subkey ={path = "/home/stephen/dev/purestake/substrate/bin/utils/subkey" }
beefy-gadget ={path = "/home/stephen/dev/purestake/substrate/client/beefy" }
beefy-gadget-rpc ={path = "/home/stephen/dev/purestake/substrate/client/beefy/rpc" }
sc-consensus-manual-seal ={path = "/home/stephen/dev/purestake/substrate/client/consensus/manual-seal" }
sc-consensus-pow ={path = "/home/stephen/dev/purestake/substrate/client/consensus/pow" }
sp-consensus-pow ={path = "/home/stephen/dev/purestake/substrate/primitives/consensus/pow" }
pallet-atomic-swap ={path = "/home/stephen/dev/purestake/substrate/frame/atomic-swap" }
pallet-bags-list-fuzzer ={path = "/home/stephen/dev/purestake/substrate/frame/bags-list/fuzzer" }
pallet-bags-list-remote-tests ={path = "/home/stephen/dev/purestake/substrate/frame/bags-list/remote-tests" }
pallet-beefy ={path = "/home/stephen/dev/purestake/substrate/frame/beefy" }
pallet-beefy-mmr ={path = "/home/stephen/dev/purestake/substrate/frame/beefy-mmr" }
beefy-merkle-tree ={path = "/home/stephen/dev/purestake/substrate/frame/beefy-mmr/primitives" }
frame-election-solution-type-fuzzer ={path = "/home/stephen/dev/purestake/substrate/frame/election-provider-support/solution-type/fuzzer" }
pallet-example-basic ={path = "/home/stephen/dev/purestake/substrate/frame/examples/basic" }
pallet-example-offchain-worker ={path = "/home/stephen/dev/purestake/substrate/frame/examples/offchain-worker" }
pallet-example-parallel ={path = "/home/stephen/dev/purestake/substrate/frame/examples/parallel" }
pallet-nicks ={path = "/home/stephen/dev/purestake/substrate/frame/nicks" }
pallet-node-authorization ={path = "/home/stephen/dev/purestake/substrate/frame/node-authorization" }
pallet-scored-pool ={path = "/home/stephen/dev/purestake/substrate/frame/scored-pool" }
pallet-staking-reward-fn ={path = "/home/stephen/dev/purestake/substrate/frame/staking/reward-fn" }
frame-support-test-compile-pass ={path = "/home/stephen/dev/purestake/substrate/frame/support/test/compile_pass" }
sp-api-test ={path = "/home/stephen/dev/purestake/substrate/primitives/api/test" }
sp-application-crypto-test ={path = "/home/stephen/dev/purestake/substrate/primitives/application-crypto/test" }
sp-arithmetic-fuzzer ={path = "/home/stephen/dev/purestake/substrate/primitives/arithmetic/fuzzer" }
sp-npos-elections-fuzzer ={path = "/home/stephen/dev/purestake/substrate/primitives/npos-elections/fuzzer" }
sp-runtime-interface-test ={path = "/home/stephen/dev/purestake/substrate/primitives/runtime-interface/test" }
sp-runtime-interface-test-wasm-deprecated ={path = "/home/stephen/dev/purestake/substrate/primitives/runtime-interface/test-wasm-deprecated" }
substrate-test-utils-test-crate ={path = "/home/stephen/dev/purestake/substrate/test-utils/test-crate" }
substrate-frame-rpc-support ={path = "/home/stephen/dev/purestake/substrate/utils/frame/rpc/support" }
generate-bags ={path = "/home/stephen/dev/purestake/substrate/utils/frame/generate-bags" }
node-runtime-generate-bags ={path = "/home/stephen/dev/purestake/substrate/utils/frame/generate-bags/node-runtime" }
