[package]
name = "cumulus-client-network"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2018"

[dependencies]
# Substrate deps
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }
polkadot-node-primitives = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }
polkadot-client = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }
polkadot-parachain = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }

# other deps
codec = { package = "parity-scale-codec", version = "2.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
tracing = "0.1.22"
parking_lot = "0.10.2"
derive_more = "0.99.2"

[dev-dependencies]
tokio = { version = "1.10", features = ["macros"] }

# Cumulus deps
cumulus-test-service = { path = "../../test/service" }
cumulus-primitives-core = { path = "../../primitives/core" }

# Polkadot deps
polkadot-test-client = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }

# substrate deps
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-keystore = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-cli = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
substrate-test-utils = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-service = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
