[package]
name = "cumulus-client-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Cumulus dependencies
cumulus-client-consensus-common = { path = "../consensus/common" }
cumulus-client-collator = { path = "../collator" }
cumulus-client-pov-recovery = { path = "../pov-recovery" }
cumulus-primitives-core = { path = "../../primitives/core" }

# Substrate dependencies
sc-chain-spec = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-service = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-telemetry = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-tracing = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-consensus-babe = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }
polkadot-service = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }
polkadot-overseer = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }

# Other deps
tracing = "0.1.22"
codec = { package = "parity-scale-codec", version = "2.3.0" }
parking_lot = "0.10.2"
